# binance-trades-parser

./: README.md  pyproject.toml
binance_trades_parser/: __init__.py  __main__.py  binance_trades_parser.py
binance_trades_parser/models/: case_insensitive_enum.py  custom_base_model.py  side.py  trade.py  trade_status.py
binance_trades_parser/shared/utils/: logger.py
